--- a/public/nav.css
+++ b/public/nav.css
@@ -4,7 +4,7 @@
     padding: 0;
     width: 20vw;
     background-color: gray;
-    border-radius: 0.5vw;
+    border-radius: 0.4875vw;
     box-shadow: 0 0.20833333333333334vw 0.4166666666666667vw 0 rgba(0, 0, 0, 0.2), 0 0.3125vw 1.0416666666666665vw 0 rgba(0, 0, 0, 0.19);
     line-height: 80%;
 }
@@ -15,7 +15,7 @@
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     /*padding-bottom: 3px;*/
     display: block;
-    padding: 1.4vw 0;
+    padding: 1.05vw 0;
     text-decoration: none;
     color: #ffffff;
 }
@@ -26,14 +26,14 @@
 }
 
 .navUp {
-    border-top-left-radius: 0.5vw;
-    border-top-right-radius: 0.5vw;
+    border-top-left-radius: 0.4875vw;
+    border-top-right-radius: 0.4875vw;
     /*border-bottom: solid #000000 1px;*/
 }
 
 .navDown {
-    border-bottom-left-radius: 0.5vw;
-    border-bottom-right-radius: 0.5vw;
+    border-bottom-left-radius: 0.4875vw;
+    border-bottom-right-radius: 0.4875vw;
 }
 
 /*.navCenter {
@@ -45,7 +45,7 @@
     width: 0;
     text-align: center;
     background-color: rgb(204, 204, 204);
-    border-radius: 1vw;
+    border-radius: 0.75vw;
     box-shadow: 0 0.20833333333333334vw 0.4166666666666667vw 0 rgba(0, 0, 0, 0.2), 0 0.3125vw 1.0416666666666665vw 0 rgba(0, 0, 0, 0.19);
     height: 0;
 }
@@ -53,7 +53,7 @@
 .borderIn {
     text-align: left;
     width: 0;
-    padding: 1vw;
+    padding: 0.75vw;
     vertical-align: top;
 }
 
@@ -66,12 +66,13 @@
 
 .navMenu img {
     box-shadow: 0 0.20833333333333334vw 0.4166666666666667vw 0 rgba(0, 0, 0, 0.2), 0 0.3125vw 1.0416666666666665vw 0 rgba(0, 0, 0, 0.19);
+    width: 12vw;
 }
 
 .header1 {
-    font-size: 1.75vw;
+    font-size: 1.3125vw;
 }
 
 .header2 {
-    font-size: 1.2vw;
+    font-size: 0.9vw;
 }
