Go to top button added and HTMLs refactored (except index.html)

--- a/public/page.css
+++ b/public/page.css
@@ -14,3 +14,27 @@
 .mainHeader {
     text-align: center;
 }
+
+#TopButton {
+    display: none;
+    text-align: center;
+    width: 4vw;
+    height: 2vw;
+    border-radius: 0.5vw;
+    position: fixed;
+    font-size: 1vw;
+    font-family: Verdana;
+    line-height: 2vw;
+    background-color: gray;
+    color: #ffffff;
+    z-index: 1;
+    bottom: 1vw;
+    right: 1vw;
+    cursor: pointer;
+
+}
+
+#TopButton:hover {
+    color: rgb(255, 216, 109);
+    background-color: rgb(140, 140, 140);
+}
