--- a/public/main.css
+++ b/public/main.css
@@ -11,14 +11,16 @@ html, body {
 
 #NavSide {
     vertical-align: top;
-    position: fixed;
+    width: 23vw;
+    min-width: 23vw;
+    max-width: 23vw;
 }
 
 #PageSide {
     vertical-align: top;
     width: 72vw;
-    padding-left: 2%;
-    padding-right: 2%;
+    padding-left: 2vw;
+    padding-right: 2vw;
 }
 
 h1 {
