--- a/public/menu.css
+++ b/public/menu.css
@@ -1,11 +1,11 @@
 #Menu {
     width: min-content;
-    height: 40vh;
+    height: 22.5vw;
     text-align: center;
     vertical-align: center;
     margin-left: auto;
     margin-right: auto;
-    font-size: 20px;
+    font-size: 1.2vw;
     font-family: sans-serif;
 }
 
@@ -18,7 +18,7 @@
     vertical-align: center;
     text-align: center;
     font-family: Verdana;
-    font-size: 75px;
+    font-size: 4vw;
     margin: auto;
     padding: 5vw;
 }
@@ -57,6 +57,7 @@
 }
 
 .overflow img {
+    width: 12vw;
     transform: scale(1.05);
     transition: all 250ms cubic-bezier(0.25, 0.46, 0.45, 0.94);
 }
